(fix) fix pseudo text align

--- a/src/Pages/ExamHunter.css
+++ b/src/Pages/ExamHunter.css
@@ -159,6 +159,7 @@
 .ExamTitle__Pseudo {
     grid-area: pseudo;
     justify-items: start !important;
+    text-align: start;
 }
 
 .Card:has(.ExamStats) {
